refactoring, cleanup, and updates